--- a/Tiffans/src/components/Footer/Footer.css
+++ b/Tiffans/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     color: #d9d9d9;
-    background-color: #323232;
+    background-color: #1b1b1b;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,6 +40,16 @@
     border: none;
 }
 .footer-content-left .logoss{
-    width: 120px;
-    border: 1px solid #eee;
+    width: 140px;
+}
+
+@media (max-width:750px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
