--- a/Tiffans/src/components/Header/Header.css
+++ b/Tiffans/src/components/Header/Header.css
@@ -41,3 +41,20 @@
     color: white;
     transform: scale(1.04);
 }
+
+@media (max-width:1050px) {
+    /* .header{
+        height: 38vw;
+    } */
+    .header-contents{
+        max-width: 45%;
+    }
+}
+@media (max-width:750px) {
+    .header-contents{
+        max-width: 55%;
+    }
+    .header-contents button{
+        padding: 2vw 4vw;
+    }
+}
