--- a/Tiffans/src/components/Navbar/Navbar.css
+++ b/Tiffans/src/components/Navbar/Navbar.css
@@ -57,3 +57,46 @@
 .navbar-search-icon .basket_img{
     width: 38px;
 }
+
+@media (max-width:1050px) {
+    .navbar .logoe{
+        width: 140px;
+    }
+    .navbar-menu{
+        gap: 20px;
+        font-size: 17px;
+    }
+    .navbar-right{
+        gap: 30px;
+    }
+    .navbar-right img{
+        width: 22px;
+    }
+    .navbar-right button{
+        padding: 8px;
+    }
+}
+@media (max-width:900px) {
+    .navbar .logoe{
+        width: 120px;
+    }
+    .navbar-menu{
+        gap: 15px;
+        font-size: 16px;
+    }
+    .navbar-right{
+        gap: 20px;
+    }
+    .navbar-right img{
+        width: 20px;
+    }
+    .navbar-right button{
+        padding: 7px 20px;
+        font-size: 15px;
+    }
+}
+@media (max-width:750px) {
+    .navbar-menu{
+        display: none;
+    }
+}
